--- a/src/scss/modules/_container.scss
+++ b/src/scss/modules/_container.scss
@@ -2,6 +2,8 @@
 .container {
   width: 400px;
   height: 400px;
+  flex-grow: 0;
+  flex-shrink: 0;
   border-radius: 50%;
   display: flex;
   align-items: center;
